example/logs_example/vivado_logs/example1_test1.txt

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
  **** SW Build 2552052 on Fri May 24 14:47:09 MDT 2019
  **** IP Build 2548770 on Fri May 24 18:01:18 MDT 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

source /opt/xilinx/Vivado/2019.1/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/opt/xilinx/Vivado/2019.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'vivado' on host 'lesc-server' (Linux_x86_64 version 4.15.0-106-generic) on Sat Aug 01 02:31:50 UTC 2020
INFO: [HLS 200-10] On os Ubuntu 18.04.4 LTS
INFO: [HLS 200-10] In directory '/home/vivado/HLStools/example_vivado/example1'
[2K

vivado_hls> 
[12C[2K

vivado_hls> o
[13C[2K

vivado_hls> op
[14C[2K

vivado_hls> ope
[15C[2K

vivado_hls> open
[16C[2K

vivado_hls> open_
[17C[2K

vivado_hls> open_p
[18C[2K

vivado_hls> open_project
[24C[2K

vivado_hls> open_project 
[25C[2K

vivado_hls> open_project t
[26C[2K

vivado_hls> open_project te
[27C[2K

vivado_hls> open_project tes
[28C[2K

vivado_hls> open_project test
[29C[2K

vivado_hls> open_project test1
[30C
INFO: [HLS 200-10] Opening project '/home/vivado/HLStools/example_vivado/example1/test1'.
0
[2K

vivado_hls> 
[12C[2K

vivado_hls> o
[13C[2K

vivado_hls> op
[14C[2K

[1;32mopen 
open_project 
open_solution 
[0m[32mopen 
openssl 
openssl.exe 
openvpn 
openvt 
opt 
opt-6.0 
[0m
[2K

vivado_hls> op
[14C[2K

vivado_hls> ope
[15C[2K

vivado_hls> open
[16C[2K

vivado_hls> open_
[17C[2K

vivado_hls> open_s
[18C[2K

vivado_hls> open_solution
[25C[2K

vivado_hls> open_solution 
[26C[2K

vivado_hls> open_solution s
[27C[2K

vivado_hls> open_solution so
[28C[2K

vivado_hls> open_solution sol
[29C
INFO: [HLS 200-10] Opening solution '/home/vivado/HLStools/example_vivado/example1/test1/sol'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
/home/vivado/HLStools/example_vivado/example1/test1/vivado_hls.app
[2K

vivado_hls> 
[12C[2K

vivado_hls> c
[13C[2K

vivado_hls> cs
[14C[2K

vivado_hls> csy
[15C[2K

vivado_hls> csynth_design
[25C
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'example1_test1.c' ... 
WARNING: [HLS 200-40] In file included from example1_test1.c:1:
example1_test1.c:14:9: warning: address of stack memory associated with local variable 'b' returned [-Wreturn-stack-address]
 return b;
        ^
1 warning generated.
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:13 ; elapsed = 00:00:25 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 1283 ; free virtual = 33681
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:13 ; elapsed = 00:00:25 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 1283 ; free virtual = 33681
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:15 ; elapsed = 00:00:26 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 1291 ; free virtual = 33688
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-75] example1_test1.c:6: function 'test' returns a pointer value; please inline this function or change return to an argument.
INFO: [SYNCHK 200-10] 1 error(s), 0 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
[2K

vivado_hls> 
[12C[2K

vivado_hls> c
[13C[2K

vivado_hls> cs
[14C[2K

vivado_hls> csy
[15C[2K

vivado_hls> csynth_design
[25C
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'example1_test1.c' ... 
WARNING: [HLS 200-40] In file included from example1_test1.c:1:
example1_test1.c:14:9: warning: address of stack memory associated with local variable 'b' returned [-Wreturn-stack-address]
 return b;
        ^
1 warning generated.
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:27 ; elapsed = 00:00:41 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 1290 ; free virtual = 33688
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:27 ; elapsed = 00:00:41 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 1290 ; free virtual = 33688
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:28 ; elapsed = 00:00:43 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 1290 ; free virtual = 33688
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-75] example1_test1.c:6: function 'test' returns a pointer value; please inline this function or change return to an argument.
INFO: [SYNCHK 200-10] 1 error(s), 0 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
[2K

vivado_hls> 
[12CINFO: [Common 17-206] Exiting vivado_hls at Sat Aug  1 02:32:36 2020...
